# easywork

./: CMakeLists.txt  README.md
include/: common.hpp  easywork.hpp  raii.hpp  singleton_manager.hpp  smart_pointer.hpp
src/: CMakeLists.txt  easywork.cc  example.cc  singleton_manager.cc
